--- a/wdae/wdae/gpfjs/static/registration/styles.css
+++ b/wdae/wdae/gpfjs/static/registration/styles.css
@@ -1,8 +1,53 @@
 
+body {
+  margin-left: 15px;
+}
+
+header {
+    margin-bottom: 0.75rem;
+}
+
 table {
   border-collapse:separate;
   margin: 0%;
-  margin-left: 15px;
+  border-spacing: 0px;
+}
+
+table .message {
+  width: calc(344px - 2.5rem);
+  margin: 0px;
+  margin-bottom: 10px;
+}
+
+.message {
+  padding: 0.75rem 1.25rem;
+  margin-top: 15px;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+  width: calc(346px - 2.5rem);
+}
+
+.message.success {
+  color: #155724;
+  background-color: #d4edda;
+  border-color: #c3e6cb;
+}
+
+.message.warn {
+  background-color: #fff3cd;
+  border-color: #ffeeba;
+  color: #856404;
+}
+
+.message.error {
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
+  color: #721c24;
+}
+
+.login-header {
+  font-weight: 500;
+  font-family: Roboto, sans-serif;
 }
 
 .login-button {
@@ -10,7 +55,7 @@ table {
   color: #fff;
   background-color: #2a6395;
   float: left;
-  margin-left: -1px;
+  border: 0px;
 }
 
 img {
@@ -37,7 +82,7 @@ td, th, input, a, .login-button {
 }
 
 a, .login-button {
-  width: 348px;
+  width: 346px;
 }
 
 div, a {
