GPF-1796 Implement logging in with a Google account

--- a/wdae/wdae/gpfjs/static/registration/styles.css
+++ b/wdae/wdae/gpfjs/static/registration/styles.css
@@ -58,6 +58,10 @@ table .message {
   border: 0px;
 }
 
+.login-button-google {
+  background-color: #db603a;
+}
+
 img {
   height: 30px;
   padding-right: 6px;
