--- a/wdae/wdae/users_api/templates/users_api/registration/reset-password.html
+++ b/wdae/wdae/users_api/templates/users_api/registration/reset-password.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    {% load static %}
 
     <head>
         <meta charset="utf-8" />
@@ -8,14 +9,14 @@
         </title>
         <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=latin-ext" rel="stylesheet">
-        <link href="/static/registration/favicon.ico" rel="icon" type="image/x-icon">
-        <link href="/static/registration/styles.css" rel="stylesheet">
+        <link href="{% static 'users_api/registration/favicon.ico' %}" rel="icon" type="image/x-icon">
+        <link href="{% static 'users_api/registration/styles.css' %}" rel="stylesheet">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     </head>
 
     <body>
         <header>
-            <img src="/static/registration/logo-64x64.png">
+            <img src="{% static 'users_api/registration/logo-64x64.png' %}">
             <label class="login-header">GPF: Genotypes and Phenotypes in Families</label>
         </header>
 
