--- a/wdae/wdae/streamsaver/templates/streamsaver/mitm.html
+++ b/wdae/wdae/streamsaver/templates/streamsaver/mitm.html
@@ -1,4 +1,9 @@
 <!--
+    This code has been copied from:
+    https://github.com/jimmywarting/StreamSaver.js/blob/master/mitm.html
+-->
+
+<!--
 	mitm.html is the lite "man in the middle"
 
 	This is only meant to signal the opener's messageChannel to
