--- a/wdae/wdae/users_api/templates/users_api/registration/forgotten-password.html
+++ b/wdae/wdae/users_api/templates/users_api/registration/forgotten-password.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8" />
         <title>
-            GPF Login
+            GPF Reset password
         </title>
         <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=latin-ext" rel="stylesheet">
@@ -15,36 +15,26 @@
     </head>
 
     <body>
-        <header>
-            <img src="{% static 'users_api/registration/logo-64x64.png' %}">
-            <label class="login-header">GPF: Genotypes and Phenotypes in Families</label>
-        </header>
+        <div class="login-container">
+            <div class="logo-header">
+                <img class="logo" src="{% static 'users_api/registration/logo-64x64.png' %}">
+                <label class="header-text">Genotypes and Phenotypes in Families</label>
+            </div>
+        
+            {% if show_form %}
+            <form method="post" action="{% url 'forgotten_password' %}">
+                {% csrf_token %}
 
-        {% if show_form %}
-        <form method="post" action="{% url 'forgotten_password' %}" style="text-align:center">
-            {% csrf_token %}
-            <table>
-                <tr>
-                    <td>
-                        <div>{{ form.email.errors }}</div>
-                        <div>{{ form.email.label_tag }}</div>
-                        <div>{{ form.email }}</div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <input class="login-button" type="submit" value="Reset password">
-                    </td>
-                </tr>
-            </table>
-
-
-        </form>
-        {% endif %}
-        {% if message != None %}
-        <div class="message {{ message_type }}">{{ message }}</div>
-        {% endif %}
-
+                <div>{{ form.email.errors }}</div>
+                <div class="login-data-label">{{ form.email.label_tag }}</div>
+                <div>{{ form.email }}</div>
+                <input class="login-button" type="submit" value="Reset password">
+            </form>
+            {% endif %}
+            
+            {% if message != None %}
+            <div class="message {{ message_type }}">{{ message }}</div>
+            {% endif %}
+        </div>
     </body>
-
 </html>
