--- a/wdae/wdae/users_api/templates/users_api/registration/set-password.html
+++ b/wdae/wdae/users_api/templates/users_api/registration/set-password.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8" />
         <title>
-            GPF Login
+            GPF New password
         </title>
         <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=latin-ext" rel="stylesheet">
@@ -15,52 +15,39 @@
     </head>
 
     <body>
-        <header>
-            <img src="{% static 'users_api/registration/logo-64x64.png' %}">
-            <label class="login-header">GPF: Genotypes and Phenotypes in Families</label>
-        </header>
 
-        {% if form != None %}
-        <form method="post" action="{% url 'set_password' %}" style="text-align:center">
-            {% csrf_token %}
-            <table>
-                <tr>
-                    <td>
-                        <div>{{ form.new_password1.label_tag }}</div>
-                        <div>{{ form.new_password1 }}</div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <div>{{ form.new_password2.label_tag }}</div>
-                        <div>{{ form.new_password2 }}</div>
-                    </td>
-                </tr>
+        <div class="login-container">
+            <div class="logo-header">
+                <img class="logo" src="{% static 'users_api/registration/logo-64x64.png' %}">
+                <label class="header-text">Genotypes and Phenotypes in Families</label>
+            </div>
+        
+            {% if form != None %}
+            <form method="post" action="{% url 'set_password' %}">
+                {% csrf_token %}
+        
+                <div class="login-data-label">{{ form.new_password1.label_tag }}</div>
+                <div>{{ form.new_password1 }}</div>
+            
+                <div class="login-data-label">{{ form.new_password2.label_tag }}</div>
+                <div>{{ form.new_password2 }}</div>
+                    
                 {% if form.errors %}
-                <tr>
-                    <td>
-                        {% for errors in form.errors.values %}
-                        {% for error in errors %}
-                        <div class="message error">{{ error }}</div>
-                        {% endfor %}
-                        {% endfor %}
-                    </td>
-                </tr>
+                    {% for errors in form.errors.values %}
+                    {% for error in errors %}
+                    <div class="message error">{{ error }}</div>
+                    {% endfor %}
+                    {% endfor %}
                 {% endif %}
-                <tr>
-                    <td>
-                        <input class="login-button" type="submit" value="Set password">
-                    </td>
-                </tr>
-            </table>
 
+                <input class="login-button" type="submit" value="Set password">
+            </form>
+            {% endif %}
 
-        </form>
-        {% endif %}
-        {% if message != None %}
-        <div class="message warn">{{ message }}</div>
-        {% endif %}
-
+            {% if message != None %}
+            <div class="message warn">{{ message }}</div>
+            {% endif %}
+        </div>
     </body>
 
 </html>
